# KBO_data

./: .gitignore  20210409_KTSS0.json  20210409_NCHT0.json  20210409_OBHH0.json  20210409_SKLG0.json  20210409_WOLT0.json  20210411_KTSS0.json  20210411_NCHT0.json  20210411_OBHH0.json  20210411_SKLG0.json  20210411_WOLT0.json  20210413_HHSS0.json  20210413_KTOB0.json  20210413_LGWO0.json  20210413_LTHT0.json  20210413_NCSK0.json  20210416_HHNC0.json  20210416_HTSK0.json  20210416_OBLG0.json  20210416_SSLT0.json  20210416_WOKT0.json  20210417_HHNC0.json  20210417_HTSK0.json  20210417_OBLG0.json  20210417_SSLT0.json  20210417_WOKT0.json  20210418_HHNC0.json  20210418_HTSK0.json  20210418_OBLG0.json  20210418_SSLT0.json  20210418_WOKT0.json  20210423_LGHH0.json  20210423_LTKT0.json  20210423_NCOB0.json  20210423_SKWO0.json  20210423_SSHT0.json  20210425_LGHH0.json  20210425_LTKT0.json  20210425_NCOB0.json  20210425_SKWO0.json  (+162 more)
kbo_data/: 2002_04.json  2002_07.json  2012_04.json  2012_07.json  2012_08.json  2019_03.json  2019_09.json  2019_10.json  batter.py  batters.py  code_list.ini  config.ini  for_actions.py  get_data.py  get_game_schedule.py  get_monthly_game_schedules.py  get_page.py  get_player_id_daily.py  get_players.py  get_todaySchedule.py  get_today_schedule_for_actions.py  get_today_schedule_for_request.py  kbo_data.ini  missing_game_data_list.ini  modify_player_id.py  modifying.py  modifying_page.py  parsing_game_schedule.py  pasing_page.py  pitchers.py  scoreboards.py  single_game.py  temp.ipynb  temp_for_action.py  utility.py
player_id/: crawling_page.py  (+1 more)
(+357 files in other folders)
