[tool.poetry]
name = "KBO_data"
version = "0.1.0"
description = ""
authors = ["Jaehwan <dialektike@gmail.com>"]
exclude = ["public/*", "kbo_data/for_actions.py"]

[tool.poetry.dependencies]
python = "^3.7.1"
selenium = "^3.141.0"
pandas = "^1.2.2"
bs4 = "^0.0.1"
lxml = "^4.6.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
factory-boy = "^3.2.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
